--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pdfjs-dist": "^4.2.67",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
