--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-worker --experimental-specifier-resolution=node app.mjs"
   },
   "keywords": [],
   "author": "",
@@ -13,14 +13,17 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "gulp": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.2.67",
     "pg": "^8.11.5",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "worker-loader": "^3.0.8"
   }
 }
